tests/agl/rejections/scope/input_not_root.agl
if true =>
  param late
| else =>
  pass
